--- a/weather.html
+++ b/weather.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ResortRadar</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./style.css" />
-
+  <!-- style sheet-->
+    <link rel="stylesheet" href="./Assets/CSS/style.css" />
+  <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  
-    <script defer src="./script.js" type="text/javascript"></script>
+  <!-- javascript -->
+    <script defer src="./assets/js/script.js" type="text/javascript"></script>
    
 
   
