--- a/weather.html
+++ b/weather.html
@@ -11,6 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
   <!-- javascript -->
     <script defer src="./assets/js/script.js" type="text/javascript"></script>
    
@@ -48,8 +49,8 @@
 
         <div class="result mt-4" id="result"></div>
     </div>
-
-    
+    <div id="card-container" class="card-container"></div>
+   
 </body>
 
 </html>
