--- a/weather.html
+++ b/weather.html
@@ -44,7 +44,7 @@
         <div class="result md-4 " id="result"></div>
         
     </div>
-    <div class="col-sm-4  justify-content-center">
+    <div class="row-sm-4">
      <div id= "weather-cards-container"></div>
     </div>
 </body>
