card images are changing based on weather

--- a/index.html
+++ b/index.html
@@ -58,26 +58,27 @@
                             <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                         </li>
                     </ul> -->
-                    <form class="d-flex" id="weather-form" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Enter City" aria-label="Search" id="city"
-                            name="city" required>
-                        <input class="form-control me-2" type="search" placeholder="Enter State" aria-label="Search" id="state"
-                            name="state" required>
-                        <button class="btn btn-primary" type="submit">Get Weather</button>
-                    </form>
-                </div>
+                <form class="d-flex" id="weather-form" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Enter City" aria-label="Search"
+                        id="city" name="city" required>
+                    <input class="form-control me-2" type="search" placeholder="Enter State" aria-label="Search"
+                        id="state" name="state" required>
+                    <button class="btn btn-primary" type="submit">Get Weather</button>
+                </form>
             </div>
+
         </nav>
-        
-
-        <h1 class="text-center mb-4">ResortRadar</h1>
-        <h2 class="text-center mb-4 ">Let's travel!</h2>
-
-        <div class="result md-4 " id="result"></div>
+    </div>
 
 
+    <h1 class="text-center mb-4">ResortRadar</h1>
+    <h2 class="text-center mb-4 ">Let's travel!</h2>
 
-        <div class="row" id="weather-cards-container"></div>
+    <div class="result md-4 " id="result"></div>
+
+
+
+    <div class="row" id="weather-cards-container"></div>
     </div>
 
 
