adjusted submit button size

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         id="city" name="city" required>
                     <input class="form-control me-2" type="search" placeholder="Enter State" aria-label="Search"
                         id="state" name="state" required>
-                    <button class="btn btn-primary" id="submit" type="submit">Get Weather</button>
+                    <button class="btn btn-primary btn-sm" id="submit" type="submit">Get Weather</button>
                 </form>
             </div>
 
