--- a/index.html
+++ b/index.html
@@ -64,8 +64,18 @@
                     <input class="form-control me-2" type="search" placeholder="Enter State" aria-label="Search"
                         id="state" name="state" required>
                     <button class="btn btn-primary btn-sm" id="submit" type="submit"  >Get Weather</button>
+                    
                 </form>
             </div>
+ <!-- <div class="container">
+        <h1 class="text-center">Set Search Limit</h1>
+        <div class="form-group">
+            <label for="searchLimit">Enter the number of search compares (max 6):</label>
+            <input type="number" class="form-control" id="searchLimit" max="6" />
+        </div>
+        <button class="btn btn-primary btn-block" onclick="setSearchLimit()">Set Limit</button>
+        <div id="message" class="mt-3"></div>
+    </div> -->
 
         </nav>
 
