--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- javascript -->
-    <script defer src="./assets/js/script.js" type="text/javascript"></script>
+    <script defer src="./Assets/JS/script.js" type="text/javascript"></script>
 </head>
 
 
