--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <!-- <div class="container"> -->
-        <nav class="navbar navbar-expand-lg bg-danger navitems">
+        <nav class="navbar navbar-expand-lg bg-dark navitems">
             <!-- <div class="container-fluid"> -->
                 <div class="d-flex justify-content-between text-white title">
 
@@ -34,9 +34,8 @@
                         id="city" name="city" required>
                     <input class="form-control me-2" type="search" placeholder="Enter State" aria-label="Search"
                         id="state" name="state" required>
-                    <button class="btn btn-primary btn-sm ml-2 mr-2 pl-2 pr-2" id="submit" type="submit"  >Get Weather</button>
-                    
-                </form>
+                    <button class="btn btn-primary btn-sm ml-2 mr-2 pl-2 pr-2" id="submit" type="submit"  >Get Weather</button> 
+                     </form>
 
             <!-- Modal Structure -->
             <div id="searchLimitModal" class="modal fade" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
